Refactor: Implementación de DTOs, Seguridad con BCrypt, Swagger 3 y Validaciones