@@ -1,7 +1,8 @@
 package com.library.api.service;
 
 import com.library.api.dto.BookDTO;
-import com.library.api.exception.AlreadyExistsException;
+import com.library.api.exception.BadRequestException;
+import com.library.api.exception.ResourceNotFoundException;
 import com.library.api.model.Book;
 import com.library.api.model.Branch;
 import com.library.api.model.Reader;
@@ -10,8 +11,10 @@ import com.library.api.repository.IBranchRepository;
 import com.library.api.repository.IReaderRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class BookService implements IBookService {
@@ -26,9 +29,13 @@ public class BookService implements IBookService {
     private IReaderRepository readerRepo;
 
     @Override
-    public List<Book> getBooks() {
+    public List<BookDTO> getBooks() {
 
-        return bookRepo.findAll();
+        List<Book> books = bookRepo.findAll();
+
+        return books.stream()
+                .map(this::convertToDTO)
+                .toList();
     }
 
     @Override
@@ -38,113 +45,87 @@ public class BookService implements IBookService {
 
     @Override
     public void deleteBook(Long idBook) {
-
+        if (!bookRepo.existsById(idBook)) {
+            throw new ResourceNotFoundException("No se puede eliminar: Libro no encontrado ID: " + idBook);
+        }
         bookRepo.deleteById(idBook);
     }
 
     @Override
-    public Book findBook(Long idBook) {
-
-        return bookRepo.findById(idBook).orElse(null);
+    public BookDTO findBook(Long idBook) {
+        Book book = bookRepo.findById(idBook)
+                .orElseThrow(() -> new ResourceNotFoundException("Libro no encontrado ID: " + idBook));
+        return convertToDTO(book);
     }
 
     @Override
     public BookDTO getBookInfo(Long idBook) {
-        Book book = this.findBook(idBook);
-
-
-        if (book == null) {
-            return null;
-        }
-
-        BookDTO bookDTO = new BookDTO();
-        bookDTO.setBookTitle(book.getTitle());
-        bookDTO.setBookGenre(book.getGenre());
-
-        if (book.getReader() != null) {
-            String fullName = book.getReader().getFirstName() + " " + book.getReader().getLastName();
-            bookDTO.setReaderFullName(fullName);
-        } else {
-            bookDTO.setReaderFullName("Available (No reader)");
-        }
-
-        return bookDTO;
+        return this.findBook(idBook);
     }
 
     @Override
     public List<BookDTO> getBooksByGenre(String genre) {
-
-        List<Book> books = bookRepo.findByGenre(genre);
-
-
-        return books.stream()
-                .map(book -> {
-                    BookDTO dto = new BookDTO();
-                    dto.setBookTitle(book.getTitle());
-                    dto.setBookGenre(book.getGenre());
-
-                    dto.setReaderFullName(book.getReader() != null ?
-                            book.getReader().getFirstName() + " " + book.getReader().getLastName() :
-                            "Available in shelves");
-                    return dto;
-                })
-                .toList();
+        return bookRepo.findByGenre(genre).stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
     }
 
-
     @Override
+    @Transactional
     public void assignBookToBranch(Long idBook, Long idBranch) {
+        Book book = bookRepo.findById(idBook)
+                .orElseThrow(() -> new ResourceNotFoundException("Libro no encontrado ID: " + idBook));
 
-        Book book = this.findBook(idBook);
-        if (book == null) {
-            throw new AlreadyExistsException("Book not found with ID: " + idBook);
-        }
-
-
-        Branch branch = branchRepo.findById(idBranch).orElse(null);
-        if (branch == null) {
-            throw new AlreadyExistsException("Branch not found with ID: " + idBranch);
-        }
-
+        Branch branch = branchRepo.findById(idBranch)
+                .orElseThrow(() -> new ResourceNotFoundException("Sucursal no encontrada ID: " + idBranch));
 
         book.setBranch(branch);
-
-
         bookRepo.save(book);
     }
 
-
-
-
     @Override
+    @Transactional
     public void borrowBook(Long idBook, Long idReader) {
         Book book = bookRepo.findById(idBook)
-                .orElseThrow(() -> new RuntimeException("Libro no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Libro no encontrado"));
 
-        // Verificamos si NO está disponible (false) o si ya tiene lector
         if (Boolean.FALSE.equals(book.getAvailable()) || book.getReader() != null) {
-            throw new RuntimeException("El libro ya está prestado o no está disponible.");
+            throw new BadRequestException("El libro '" + book.getTitle() + "' ya está prestado.");
         }
 
         Reader reader = readerRepo.findById(idReader)
-                .orElseThrow(() -> new RuntimeException("Lector no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Lector no encontrado"));
 
         book.setReader(reader);
-        book.setAvailable(false); // Lombok genera setAvailable(Boolean b) igual que antes
-
+        book.setAvailable(false);
         bookRepo.save(book);
     }
+
     @Override
+    @Transactional
     public void returnBook(Long idBook) {
-        // 1. Buscamos el libro
         Book book = bookRepo.findById(idBook)
-                .orElseThrow(() -> new RuntimeException("Libro no encontrado con ID: " + idBook));
+                .orElseThrow(() -> new ResourceNotFoundException("Libro no encontrado"));
 
-        // 2. Lógica de devolución
-        book.setReader(null);      // Quitamos al lector
-        book.setAvailable(true);   // Lo marcamos como disponible de nuevo
+        if (Boolean.TRUE.equals(book.getAvailable())) {
+            throw new BadRequestException("El libro '" + book.getTitle() + "' ya está disponible.");
+        }
 
-        // 3. Guardamos los cambios
+        book.setReader(null);
+        book.setAvailable(true);
         bookRepo.save(book);
+    }
+
+    private BookDTO convertToDTO(Book book) {
+        BookDTO dto = new BookDTO();
+        dto.setBookTitle(book.getTitle());
+        dto.setBookGenre(book.getGenre());
+
+        if (book.getReader() != null) {
+            dto.setReaderFullName(book.getReader().getFirstName() + " " + book.getReader().getLastName());
+        } else {
+            dto.setReaderFullName("Available (No reader)");
+        }
+        return dto;
     }
 }
